# OSMemoryManager

./: CMakeLists.txt  README.md  main.cpp
Headers/: mainwindow.h  manageToQt.h
MemoryManager/: AllocationStrategy.h  BestFitStrategy.h  FirstFitStrategy.h  MemoryBlock.h  MemoryException.h  MemoryManager.cpp  MemoryManager.h  NextFitStrategy.h  WorstFitStrategy.h
Sources/: mainwindow.cpp  mainwindow.ui  manageToQt.cpp
